<resources>
    <string name="app_name">SneakerShop</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="prompt_username">Username</string>
    <string name="cancel">Cancel</string>
    <string name="action_login">Login</string>
    <string name="action_sign_up">Sign-Up</string>
    <string name="addtochart">Add to Chart</string>
    <string name="deletefromchart">Delete from Chart</string>

</resources>